style.css
/*
Make the document fill the whole viewport, this overrides any weird defaults that browsers might have.
*/
html,
body,
figure {
  width: 100%;
  padding: 0;
  margin: 0;
  border: 0;
}

html {
  font-family: helvetica, sans-serif;
}

body {
  background-color: rgba(150, 32, 93, 0.8);
}

#proj_img {
	background-color: rgba(0, 0, 0, 0);
	margin-top: 50px;
	max-width: 50%;
	/*height: auto;*/
	position: absolute;
	z-index: 6;
}

.arrow-left {
  width: 0;
  height: 0;
  border-top: 200px solid transparent;
  border-bottom: 80px solid transparent;
	z-index: 5;
  border-right: 250px solid #bfbdbd;
	opacity: 0.6;
	visibility: hidden;
	margin-left: 220px;
	margin-top: 40px;
}

.container {
  display: flex;
}

.col {
  flex: 1;
}

.col:first-child {
  margin-right: 20px;
}

p {
  text-align: justify;
}

.navbar {
  background-color: black;
  /*border-radius: 30px;*/
	position: fixed; /* Set the navbar to fixed position */
 	top: 0; /* Position the navbar at the top of the page */
	width: 100%;
	z-index: 12;
}

.navbar li {
  display: flex;
  list-style: none;
  margin: 13px 20px;
  display: inline-block;
}

.navbar li:first-child {
  float: left;
}

.navbar ul {
  overflow: auto;
  margin: 0 auto;
  padding: 0;
}

#menu {
  text-align: right;
  width: 100%;
}

.navbar li a {
  padding: 10px 25px;
  display: block;
  text-transform: uppercase;
  text-decoration: none;
  color: white;
  letter-spacing: .2em;
}

.navbar li a:hover {
  color: rgba(150, 32, 93, 0.8)
}

#pad {
  margin-top: 10px;
}

#intro {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-top: 10px;
}

#top {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-top: 10px;
}
/* ========================================================================== */
/* Stacked area chart */
#stacked {
	margin-left: 200px;
  /* float: left; */
}


/* ========================================================================== */
/* DROPDOWN SELECTION PART 1 */
.select-label {
  margin-right: 10px;
  font-size: 1rem;
  align-items: center;
  justify-content: center;
}

#options {
  display: flex;
  flex: 1;
  flex-direction: row;
}

#genres {
  align-items: center;
  justify-content: center;
}

#metrics {
  align-items: center;
  justify-content: center;
  margin-right: 10px;
  margin-left: 5px;
}

#years {
  align-items: center;
  justify-content: center;
  margin-left: 10px;
}
/* #genreSelectPart2_2 {
  align-items: center;
  justify-content: center;
} */
/* ========================================================================== */

#part1div {
  /* float: left; */
  overflow: hidden;
  height: 700px;
  width: 700px;
}

#tooltip {
  text-align: center;
  border: thick black solid;
  border-radius: 20px 10px;
	background: #bf2e77;
	margin-left: 1200px;
	margin-top: 50px;
	height: 550px;
	width: 450px;
	font-size: 25px;
}

#poster img {
	width: 250px;
	height: 375px;
}

.selected {
  color: #fff;
}

#part2div {
  clear: both;
}

#plot {
  position: absolute;
  margin-left: 350px;
}

#plot label {
	margin-right: 10px;
	font-weight: bold;
  font-size: 1rem;
	text-align: right;
	float:left;
	/* justify-content: right; */
}

/* ========================================================================== */
/* Ranking list Part 1 */
#ranked ul {
  counter-reset: index;
  padding: 0;
  max-width: 300px;
}

/* List element */
#ranked li {
  counter-increment: index;
  display: flex;
  /* align-items: center; */
  padding: 12px 0;
  box-sizing: border-box;
  font-size: 25px;
}

/* Element counter */
#ranked li::before {
  content: counters(index, ".");
  font-size: 1.5rem;
  text-align: right;
  font-weight: bold;
  min-width: 50px;
  padding-right: 12px;
  font-variant-numeric: tabular-nums;
  align-self: flex-start;
  background-image: linear-gradient(to bottom, aquamarine, orangered);
  background-attachment: fixed;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* Element separation */
#ranked li+li {
  border-top: 1px solid rgba(255, 255, 255, 0.2);
}

#ranked li:hover {
  background-image: linear-gradient(to right, rgba(158, 24, 122, 0.8), rgba(150, 32, 93, 0.8));
}

/* ========================================================================== */
/* Loading animation */
.lds-ring {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 80px;
	margin-top: 200px;
	z-index: 11;
}

.lds-ring div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 64px;
  height: 64px;
  margin: 8px;
  border: 8px solid #fff;
  border-radius: 50%;
  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  border-color: #fff transparent transparent transparent;
}

.lds-ring div:nth-child(1) {
  animation-delay: -0.45s;
}

.lds-ring div:nth-child(2) {
  animation-delay: -0.3s;
}

.lds-ring div:nth-child(3) {
  animation-delay: -0.15s;
}

@keyframes lds-ring {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

/* ========================================================================== */
#cy {
  width: 1200px;
  height: 750px;
  display: block;
  background-color: rgba(150, 32, 93, 0.8);
}

